# Julia-Sets

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix
include/: application.hpp  display.hpp  julia.hpp  window.hpp
src/: application.cpp  application.hpp  display.cpp  display.hpp  julia.hpp  main.cpp  window.cpp  window.hpp
